Scene info not updated after new OBJ import #98293

Closed
opened 2022-05-20 20:12:34 +02:00 by Eyad Ahmed · 10 comments
Contributor

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: Radeon RX 5500 XT ATI Technologies Inc. 4.5.14802 Core Profile Context 21.Q4 30.0.14011.2006

Blender Version
Broken: version: 3.3.0 Alpha, branch: native_stl_io (modified), commit date: 2022-05-20 16:40, hash: ff1400b5ea
Worked: (newest version of Blender that worked as expected)

Exact steps for others to reproduce the error
Import an object using the new experimental OBJ importer, you can see that scene info are not updated

image.png

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: Radeon RX 5500 XT ATI Technologies Inc. 4.5.14802 Core Profile Context 21.Q4 30.0.14011.2006 **Blender Version** Broken: version: 3.3.0 Alpha, branch: native_stl_io (modified), commit date: 2022-05-20 16:40, hash: `ff1400b5ea` Worked: (newest version of Blender that worked as expected) **Exact steps for others to reproduce the error** Import an object using the new experimental OBJ importer, you can see that scene info are not updated ![image.png](https://archive.blender.org/developer/F13095366/image.png)
Author
Contributor

Added subscriber: @IyadAhmed

Added subscriber: @IyadAhmed
Author
Contributor

Added subscriber: @aras_p

Added subscriber: @aras_p
Author
Contributor

cc: @aras_p

cc: @aras_p
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author
Contributor

I am working on the STL importer and having the same issue, waiting for fix so I can use it too

I am working on the STL importer and having the same issue, waiting for fix so I can use it too
Aras Pranckevicius self-assigned this 2022-05-23 11:16:03 +02:00

@IyadAhmed looks like a WM_event_add_notifier(C, NC_OBJECT | ND_TRANSFORM, nullptr); was missing at end of importer_main(bContext *C, ...) for the OBJ case -- it basically tells "yo, a scene has changed" to the windowing system, which then clears & recalculates the stats.

The Collada importer does it like the above. However USD & Alembic both do WM_main_add_notifier(NC_SCENE | ND_FRAME, data->scene); -- I'm not sure which way is more correct.

@IyadAhmed looks like a `WM_event_add_notifier(C, NC_OBJECT | ND_TRANSFORM, nullptr);` was missing at end of `importer_main(bContext *C, ...)` for the OBJ case -- it basically tells "yo, a scene has changed" to the windowing system, which then clears & recalculates the stats. The Collada importer does it like the above. However USD & Alembic both do `WM_main_add_notifier(NC_SCENE | ND_FRAME, data->scene);` -- I'm not sure which way is more correct.

This issue was referenced by fb64ee005a

This issue was referenced by fb64ee005ae9ff60b556ca41361833682ab7c803

This issue was referenced by 9e45af530a

This issue was referenced by 9e45af530aa3a035da4f393b0d3087511414d66c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98293
No description provided.